[package]
name = "rust-aptos-token-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core.git", branch = "main" }
once_cell = "1.14.0"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
url = "2.3.1"
rand = "0.7.3"