[package]
name = "rust-aptos-token-client"
version = "0.1.0"
edition = "2021"
authors = ["p0p3yee <devp0p3yee@gmail.com>", "bshn <git@bshn.rs>"]
license = "MIT"
description = "Aptos SDK for interacting with token module"
homepage = "https://gitlab.com/oss47/rust-aptos-token-client"
repository = "https://gitlab.com/oss47/rust-aptos-token-client"
readme = "README.md"
keywords = ["aptos", "aptos-sdk", "aptos-nft"]

[dependencies]
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "mainnet" }

anyhow = { version = "1.0.71", features = ["backtrace"] }
once_cell = "1.10.0"
# poem = { version = "=1.3.55", features = ["anyhow", "rustls"] }
# poem-openapi = { version = "=2.0.11", features = ["swagger-ui", "url"] }
# poem-openapi-derive = "=2.0.11"
rand = "0.7.3"
serde = { version = "=1.0.152", features = ["derive", "rc"] }
serde_json = { version = "1.0.81", features = ["preserve_order", "arbitrary_precision"] }
tokio = { version = "1.21.0", features = ["full"] }
url = { version = "2.4.0", features = ["serde"] }

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
